--- a/My Navigator (swift)/Storyboards/Base.lproj/Main.storyboard
+++ b/My Navigator (swift)/Storyboards/Base.lproj/Main.storyboard
@@ -24,10 +24,11 @@
                             </view>
                             <textField opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="откуда" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Lp-Ir-CQM">
                                 <rect key="frame" x="10" y="35" width="355" height="35"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="z5K-pZ-oF1"/>
                                 </constraints>
-                                <color key="textColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.16876151289999999" green="1" blue="0.1907874353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -36,6 +37,7 @@
                             </textField>
                             <textField opaque="NO" alpha="0.84999999999999998" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="куда" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9KP-nH-u8e">
                                 <rect key="frame" x="10" y="85" width="355" height="35"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="yte-Kf-cH1"/>
                                 </constraints>
@@ -109,18 +111,18 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="7hn-aI-jxX"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jrh-WZ-OGQ">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jrh-WZ-OGQ">
                                         <rect key="frame" x="244" y="5" width="79" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="SM6-jN-OM6"/>
                                             <constraint firstAttribute="width" constant="79" id="tfu-Oc-DtD"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Отмена">
-                                            <color key="titleColor" red="1" green="0.046772837529804212" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleColor" red="1" green="0.24578252480000001" blue="0.21450565969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="actionCancelRoute:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nwt-mb-a6v"/>
@@ -295,6 +297,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hSZ-x5-z4S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="821.60000000000002" y="31.934032983508249"/>
+        </scene>
+        <!--Query History View Controller-->
+        <scene sceneID="fUv-aK-cv6">
+            <objects>
+                <viewController storyboardIdentifier="EGQueryHistoryViewController" id="doC-Kw-bK2" customClass="EGQueryHistoryViewController" customModule="My_Navigator__swift_" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G3G-we-KWF"/>
+                        <viewControllerLayoutGuide type="bottom" id="XS3-aP-Kh8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xCH-8m-659">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" sectionIndexMinimumDisplayRowCount="1" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="b5i-5u-r8r">
+                                <rect key="frame" x="10" y="477" width="355" height="175"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="NgF-wS-xJT"/>
+                                </constraints>
+                                <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
+                                <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="uXB-uN-Y1l" detailTextLabel="dd4-Kf-PcI" style="IBUITableViewCellStyleSubtitle" id="nYb-H1-YPY">
+                                        <rect key="frame" x="0.0" y="28" width="355" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nYb-H1-YPY" id="qby-BW-qO0">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uXB-uN-Y1l">
+                                                    <rect key="frame" x="30" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dd4-Kf-PcI">
+                                                    <rect key="frame" x="30" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="doC-Kw-bK2" id="L89-D7-gBp"/>
+                                    <outlet property="delegate" destination="doC-Kw-bK2" id="sLv-RN-gXd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="b5i-5u-r8r" firstAttribute="leading" secondItem="dTF-Le-qZE" secondAttribute="leading" constant="10" id="5pm-wE-xsa"/>
+                            <constraint firstItem="dTF-Le-qZE" firstAttribute="trailing" secondItem="b5i-5u-r8r" secondAttribute="trailing" constant="10" id="AAs-4v-U15"/>
+                            <constraint firstItem="XS3-aP-Kh8" firstAttribute="top" secondItem="b5i-5u-r8r" secondAttribute="bottom" constant="15" id="lNj-y5-pf0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dTF-Le-qZE"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="b5i-5u-r8r" id="Pfd-Cr-DV6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nuo-E8-Zs0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1692" y="31.934032983508249"/>
         </scene>
     </scenes>
     <resources>
